--- a/Lab Week 5/Lab Week 5/Lab Week 5.csproj
+++ b/Lab Week 5/Lab Week 5/Lab Week 5.csproj
@@ -171,6 +171,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Services\IKidService.cs" />
+    <Compile Include="Services\IUserService.cs" />
+    <Compile Include="Services\KidService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -215,6 +219,8 @@
     <Content Include="Views\User\List.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\Kid\Details.cshtml" />
+    <Content Include="Views\Kid\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
