--- a/Lab Week 5/Lab Week 5/bin/Lab Week 5.dll.config
+++ b/Lab Week 5/Lab Week 5/bin/Lab Week 5.dll.config
@@ -16,7 +16,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=App;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\KP_DataBase.mdf" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ClassApp;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\KP_DataBase.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
